--- a/index.html
+++ b/index.html
@@ -132,9 +132,10 @@
           <li>Yuzhuang Xu, Shuo Wang, <span id="me">Peng Li</span>, Xuebo Liu, Xiaolong Wang, Weidong Liu and Yang Liu. 2024. <br/> <span id="title">Pluggable Neural Machine Translation Models via Memory-augmented Adapters</span>. <br/> In <i>Proceedings of <b>COLING 2024</b></i>, 12794-12808. [<a href="https://aclanthology.org/2024.lrec-main.1120.pdf">pdf</a>] [<a href="https://arxiv.org/abs/2307.06029">arXiv</a>] [<a href="https://github.com/xuyuzhuang11/StyleMT">code</a>]</li>
           <li>Yuanhang Zheng, Zhixing Tan, <span id="me">Peng Li</span> and Yang Liu. 2024. <br/> <span id="title">Black-box Prompt Tuning with Subspace Learning</span>. <br/> <i><b>IEEE/ACM Transactions on Audio, Speech and Language Processing (TASLP)</b></i>, 2024(32):3002-3013. [<a href="https://ieeexplore.ieee.org/document/10551912?source=authoralert">pdf</a>] [<a href="https://arxiv.org/abs/2305.03518">arXiv</a>]</li>
           <li>Xuanyu Lei, Zonghan Yang, Xinrui Chen, <span id="me">Peng Li</span>, Yang Liu. 2024. <br/> <span id="title">Scaffolding Coordinates to Promote Vision-Language Coordination in Large Multi-Modal Models</span>. <br/> <i>Preprint</i> [<a href="https://arxiv.org/abs/2402.12058">arXiv</a>] [<a href="https://leixy20.github.io/scaffold_site/">Project Webpage</a>]</li>
-          <li>Zijun Liu, Boqun Kou, <span id="me">Peng Li</span>, Ming Yan, Ji Zhang, Fei Huang and Yang Liu. 2024. <br/> <span id="title">Meta Ranking: Less Capable Language Models are Capable for Single Response Judgement</span>. <br/> <i>Preprint</i> [<a href="https://arxiv.org/abs/2402.12146">arXiv</a>] [<a href="https://github.com/THUNLP-MT/MetaRanking">code</a>]</li>
+          <li>Zijun Liu, Boqun Kou, <span id="me">Peng Li</span>, Ming Yan, Ji Zhang, Fei Huang and Yang Liu. 2024. <br/> <span id="title">Enabling Weak LLMs to Judge Response Reliability via Meta Ranking</span>. <br/> <i>Preprint</i> [<a href="https://arxiv.org/abs/2402.12146">arXiv</a>] [<a href="https://github.com/THUNLP-MT/MetaRanking">code</a>]</li>
           <li>Zonghan Yang, <span id="me">Peng Li</span>, Ming Yan, Ji Zhang, Fei Huang and Yang Liu. 2024. <br/> <span id="title">ReAct Meets ActRe: When Language Agents Enjoy Training Data Autonomy</span>. <br/> <i>Preprint</i> [<a href="https://arxiv.org/abs/2403.14589">arXiv</a>]</li>
           <li>Yile Wang, Sijie Cheng, Zixin Sun, <span id="me">Peng Li</span> and Yang Liu. 2024. <br/> <span id="title">Speak It Out: Solving Symbol-Related Problems with Symbol-to-Language Conversion for Language Models</span>. <br/> <i>Preprint</i> [<a href="https://arxiv.org/abs/2401.11725">arXiv</a>] [<a href="https://github.com/THUNLP-MT/symbol2language">code</a>]</li>
+          <li>Tianyuan Zou, Yang Liu, <span id="me">Peng Li</span>, Jianqing Zhang, Jingjing Liu and Ya-Qin Zhang. 2024. <br/> <span id="title">FuseGen: PLM Fusion for Data-generation based Zero-shot Learning</span>. <br/> <i>Preprint</i> [<a href="https://arxiv.org/abs/2406.12527">arXiv</a>]</li>
         <h3><strong>2023</strong></h3>
            <li>Zeyuan Yang, <span id="me">Peng Li</span> and Yang Liu. 2023. <br/> <span id="title">Failures Pave the Way: Enhancing Large Language Models through Tuning-free Rule Accumulation</span>. <br/> In <i>Proceedings of <b>EMNLP 2023</b></i>, 1751-1777. [<a href="https://aclanthology.org/2023.emnlp-main.109.pdf">pdf</a>] [<a href="https://arxiv.org/abs/2310.15746">arXiv</a>] [<a href="https://github.com/THUNLP-MT/TRAN">code</a>]</li>
           <li>Kaiyu Huang, <span id="me">Peng Li</span>, Junpeng Liu, Maosong Sun and Yang Liu. 2023. <br/> <span id="title">Learn and Consolidate: Continual Adaptation for Zero-Shot and Multilingual Neural Machine Translation</span>. <br/> In <i>Proceedings of <b>EMNLP 2023</b></i>, 13938-13951. [<a href="https://aclanthology.org/2023.emnlp-main.860.pdf">pdf</a>] [<a href="https://github.com/koukaiu/LCCA">code</a>]</li>
@@ -269,7 +270,7 @@ Referring Expression Matching</span>. <br/> In <i>Proceedings of <b>EMNLP 2022</
     </div>
 
     <div id="last-updated">
-      Last-updated: Jun 14, 2024.
+      Last-updated: Jun 28, 2024.
     </div>
   </body>
 </html>
