--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@ Referring Expression Matching</span>. <br/> In <i>Proceedings of <b>EMNLP 2022</
       <h2>Professional Services</h2>
       <ul>
         <li>Senior Area Chair: AACL (2022)</li>
-        <li>Area Chair: COLING (2022), NAACL (2024), EACL (2024) <!--, ACL (2024)--></li>
+        <li>Area Chair: COLING (2022), NAACL (2024), EACL (2024) <!--, ACL (2024), EMNLP (2024)--></li>
         <li>Action Editor: ACL Rolling Review (ARR)</li>
         <li>PC Chair: YWCL (2010)</li>
         <li>Tutorial Chair: CCL (2023), CCMT (2023)</li>
@@ -270,7 +270,7 @@ Referring Expression Matching</span>. <br/> In <i>Proceedings of <b>EMNLP 2022</
     </div>
 
     <div id="last-updated">
-      Last-updated: Jun 28, 2024.
+      Last-updated: Jul 10, 2024.
     </div>
   </body>
 </html>
