--- a/index.html
+++ b/index.html
@@ -130,8 +130,8 @@
           <li>Xiaolong Wang, Yile Wang, Sijie Cheng, <span id="me">Peng Li</span> and Yang Liu. 2024. <br/> <span id="title">DEEM: Dynamic Experienced Expert Modeling for Stance Detection</span>. <br/> In <i>Proceedings of <b>COLING 2024</b></i>, 4530-4541. [<a href="https://aclanthology.org/2024.lrec-main.405.pdf">pdf</a>] [<a href="https://arxiv.org/abs/2402.15264">arXiv</a>] [<a href="https://github.com/THUNLP-MT/DEEM">code</a>]</li>
           <li>Yuanhang Zheng, <span id="me">Peng Li</span>, Wei Liu, Yang Liu, Jian Luan and Bin Wang. 2024. <br/> <span id="title">ToolRerank: Adaptive and Hierarchy-Aware Reranking for Tool Retrieval</span>. <br/> In <i>Proceedings of <b>COLING 2024</b></i>, 16263-16273. [<a href="https://aclanthology.org/2024.lrec-main.1413.pdf">pdf</a>] [<a href="http://arxiv.org/abs/2403.06551">arXiv</a>] [<a href="https://github.com/XiaoMi/ToolRerank">code</a>]</li>
           <li>Yuzhuang Xu, Shuo Wang, <span id="me">Peng Li</span>, Xuebo Liu, Xiaolong Wang, Weidong Liu and Yang Liu. 2024. <br/> <span id="title">Pluggable Neural Machine Translation Models via Memory-augmented Adapters</span>. <br/> In <i>Proceedings of <b>COLING 2024</b></i>, 12794-12808. [<a href="https://aclanthology.org/2024.lrec-main.1120.pdf">pdf</a>] [<a href="https://arxiv.org/abs/2307.06029">arXiv</a>] [<a href="https://github.com/xuyuzhuang11/StyleMT">code</a>]</li>
-          <li>Zonghan Yang, <span id="me">Peng Li</span>, Ming Yan, Ji Zhang, Fei Huang and Yang Liu. 2024. <br/> <span id="title">ReAct Meets ActRe: When Language Agents Enjoy Training Data Autonomy</span>. <br/> To appear in <i>Proceedings of <b>COLM 2024</b></i>. [<a href="https://arxiv.org/abs/2403.14589">arXiv</a>]</li>
-          <li>Zijun Liu, Yanzhe Zhang, <span id="me">Peng Li</span>, Yang Liu and Diyi Yang. 2024. <br/> <span id="title">Dynamic LLM-Agent Network: An LLM-agent Collaboration Framework with Agent Team Optimization</span>. <br/> To appear in <i>Proceedings of <b>COLM 2024</b></i>. [<a href="https://arxiv.org/abs/2310.02170">arXiv</a>] [<a href="https://github.com/SALT-NLP/DyLAN">code</a>]</li>
+          <li>Zonghan Yang, <span id="me">Peng Li</span>, Ming Yan, Ji Zhang, Fei Huang and Yang Liu. 2024. <br/> <span id="title">ReAct Meets ActRe: Autonomous Annotation of Agent Trajectories for Contrastive Self-Training</span>. <br/> To appear in <i>Proceedings of <b>COLM 2024</b></i>. [<a href="https://arxiv.org/abs/2403.14589">arXiv</a>]</li>
+          <li>Zijun Liu, Yanzhe Zhang, <span id="me">Peng Li</span>, Yang Liu and Diyi Yang. 2024. <br/> <span id="title">A Dynamic LLM-Powered Agent Network for Task-Oriented Agent Collaboration</span>. <br/> To appear in <i>Proceedings of <b>COLM 2024</b></i>. [<a href="https://arxiv.org/abs/2310.02170">arXiv</a>] [<a href="https://github.com/SALT-NLP/DyLAN">code</a>]</li>
           <li>Yuanhang Zheng, Zhixing Tan, <span id="me">Peng Li</span> and Yang Liu. 2024. <br/> <span id="title">Black-box Prompt Tuning with Subspace Learning</span>. <br/> <i><b>IEEE/ACM Transactions on Audio, Speech and Language Processing (TASLP)</b></i>, 2024(32):3002-3013. [<a href="https://ieeexplore.ieee.org/document/10551912?source=authoralert">pdf</a>] [<a href="https://arxiv.org/abs/2305.03518">arXiv</a>]</li>
           <li>Yujia Qin, Xiaozhi Wang, Yusheng Su, Yankai Lin, Ning Ding, Jing Yi, Weize Chen, Zhiyuan Liu, Juanzi Li, Lei Hou, <span id="me">Peng Li</span>, Maosong Sun and Jie Zhou. 2024. <br/> <span id="title">Exploring Universal Intrinsic Task Subspace for Few-shot Learning via Prompt Tuning</span>. <br/> <i><b>IEEE/ACM Transactions on Audio, Speech and Language Processing (TASLP)</b></i>, 2024(32):3631-3643. [<a href="https://ieeexplore.ieee.org/document/10603438">pdf</a>] [<a href="https://arxiv.org/abs/2110.07867">arXiv</a>]</li>
           <li>Xiaoyue Mi, Fan Tang, Yepeng Weng, Danding Wang, Juan Cao, Sheng Tang, <span id="me">Peng Li</span>, Yang Liu. 2024. <br/> <span id="title">Topology-preserving Adversarial Training for Alleviating Natural Accuracy Degradation</span>. <br/> To appear in <i>Proceedings of <b>BMVC 2024</b></i>.</li>
@@ -248,15 +248,15 @@ Referring Expression Matching</span>. <br/> In <i>Proceedings of <b>EMNLP 2022</
       <h2>Professional Services</h2>
       <ul>
         <li>Senior Area Chair: AACL (2022)</li>
-        <li>Area Chair: COLING (2022), NAACL (2024), EACL (2024) <!--, ACL (2024), EMNLP (2024)--></li>
+        <li>Area Chair: ACL (2024), <!-- EMNLP 2024, -->NAACL (2024), EACL (2024), COLING (2022)</li>
         <li>Action Editor: ACL Rolling Review (ARR)</li>
         <li>PC Chair: YWCL (2010)</li>
         <li>Tutorial Chair: CCL (2023), CCMT (2023)</li>
         <li>Demonstration Chair: CCL (2024)</li>
-        <li>Reviewer/PC Member: NeurIPS (2022-2023), ICML (2022-2024), ICLR (2024),
+        <li>Reviewer/PC Member: NeurIPS (2022-2024), ICML (2022-2024), ICLR (2024),
           ACL (2014, 2021-2023), EMNLP (2014, 2021-2023), NAACL (2018),
           CVPR (2023-2024), ICCV (2023), ECCV (2024), AAAI (2022-2024),
-          IJCAI (2022-2024), COLING (2020,2024), BMVC (2024),
+          IJCAI (2022-2024), COLING (2020,2024), BMVC (2024), COLM (2024),
           ACM TIST(2015), TACL (Standing Reviewer), Acta Automatica Sinica</li>
       </ul>
     </div>
@@ -271,7 +271,7 @@ Referring Expression Matching</span>. <br/> In <i>Proceedings of <b>EMNLP 2022</
     </div>
 
     <div id="last-updated">
-      Last-updated: Aug 01, 2024.
+      Last-updated: Aug 16, 2024.
     </div>
   </body>
 </html>
