--- a/index.html
+++ b/index.html
@@ -139,7 +139,9 @@
           <li>Xuanyu Lei, Zonghan Yang, Xinrui Chen, <span id="me">Peng Li</span>, Yang Liu. 2024. <br/> <span id="title">Scaffolding Coordinates to Promote Vision-Language Coordination in Large Multi-Modal Models</span>. <br/> <i><b>Wordplay Workshop @ ACL 2024</b></i>. [<a href="https://arxiv.org/abs/2402.12058">arXiv</a>] [<a href="https://leixy20.github.io/scaffold_site/">Project Webpage</a>]</li>
           <li>Zijun Liu, Boqun Kou, <span id="me">Peng Li</span>, Ming Yan, Ji Zhang, Fei Huang, Yang Liu. 2024. <br/> <span id="title">Enabling Weak LLMs to Judge Response Reliability via Meta Ranking</span>. <br/> <i>Preprint</i> [<a href="https://arxiv.org/abs/2402.12146">arXiv</a>] [<a href="https://github.com/THUNLP-MT/MetaRanking">code</a>]</li>
           <li>Ziyue Wang, Chi Chen, Fuwen Luo, Yurui Dong, Yuanchi Zhang, Yuzhuang Xu, Xiaolong Wang, <span id="me">Peng Li</span>, Yang Liu. 2024. <br/> <span id="title">ActiView: Evaluating Active Perception Ability for Multimodal Large Language Models</span>. <br/> <i>Preprint</i> [<a href="https://arxiv.org/abs/2410.04659">arXiv</a>] [<a href="https://github.com/THUNLP-MT/ActiView">code</a>]</li>
+          <li>Wei Zhang, Pengfei Li, Junli Wang, Bingchuan Sun, Qihao Jin, Guangjun Bao, Shibo Rui, Yang Yu, Wenchao Ding, <span id="me">Peng Li</span>, Yilun Chen. 2024. <br/> <span id="title">Dual-AEB: Synergizing Rule-Based and Multimodal Large Language Models for Effective Emergency Braking</span>. <br/> <i>Preprint</i> [<a href="https://arxiv.org/abs/2410.08616">arXiv</a>] [<a href="https://github.com/ChipsICU/Dual-AEB">code</a>]</li>
           <li>Yile Wang, Sijie Cheng, Zixin Sun, <span id="me">Peng Li</span>, Yang Liu. 2024. <br/> <span id="title">Speak It Out: Solving Symbol-Related Problems with Symbol-to-Language Conversion for Language Models</span>. <br/> <i><b>ICLR AGI Workshop 2024</b></i>. [<a href="https://arxiv.org/abs/2401.11725">arXiv</a>] [<a href="https://github.com/THUNLP-MT/symbol2language">code</a>]</li>
+          <li>Xiaoyue Mi, Fan Tang, Juan Cao, <span id="me">Peng Li</span>, Yang Liu. 2024. <br/> <span id="title">Visual-Friendly Concept Protection via Selective Adversarial Perturbations</span>. <br/> <i>Preprint</i> [<a href="https://arxiv.org/abs/2408.08518">arXiv</a>]</li>
         <h3><strong>2023</strong></h3>
            <li>Zeyuan Yang, <span id="me">Peng Li</span>, Yang Liu. 2023. <br/> <span id="title">Failures Pave the Way: Enhancing Large Language Models through Tuning-free Rule Accumulation</span>. <br/> In <i>Proceedings of <b>EMNLP 2023</b></i>, 1751-1777. [<a href="https://aclanthology.org/2023.emnlp-main.109.pdf">pdf</a>] [<a href="https://arxiv.org/abs/2310.15746">arXiv</a>] [<a href="https://github.com/THUNLP-MT/TRAN">code</a>]</li>
           <li>Kaiyu Huang, <span id="me">Peng Li</span>, Junpeng Liu, Maosong Sun, Yang Liu. 2023. <br/> <span id="title">Learn and Consolidate: Continual Adaptation for Zero-Shot and Multilingual Neural Machine Translation</span>. <br/> In <i>Proceedings of <b>EMNLP 2023</b></i>, 13938-13951. [<a href="https://aclanthology.org/2023.emnlp-main.860.pdf">pdf</a>] [<a href="https://github.com/koukaiu/LCCA">code</a>]</li>
@@ -249,15 +251,16 @@ Referring Expression Matching</span>. <br/> In <i>Proceedings of <b>EMNLP 2022</
       <h2>Professional Services</h2>
       <ul>
         <li>Senior Area Chair: AACL (2022)</li>
-        <li>Area Chair: ACL (2024), <!-- EMNLP 2024, -->NAACL (2024), EACL (2024), COLING (2022)</li>
+        <li>Area Chair: ACL (2024), <!-- EMNLP 2024, -->NAACL (2024<!--, 2025-->), EACL (2024), COLING (2022)</li>
         <li>Action Editor: ACL Rolling Review (ARR)</li>
         <li>PC Chair: YWCL (2010)</li>
         <li>Tutorial Chair: CCL (2023), CCMT (2023)</li>
         <li>Demonstration Chair: CCL (2024)</li>
-        <li>Reviewer/PC Member: NeurIPS (2022-2024), ICML (2022-2024), ICLR (2024),
+        <li>Reviewer/PC Member: NeurIPS (2022-2024), ICML (2022-2024), ICLR (2024,2025),
           ACL (2014, 2021-2023), EMNLP (2014, 2021-2023), NAACL (2018),
-          CVPR (2023-2024), ICCV (2023), ECCV (2024), AAAI (2022-2024),
-          IJCAI (2022-2024), COLING (2020,2024), BMVC (2024), COLM (2024),
+          CVPR (2023-2025), ICCV (2023), ECCV (2024), AAAI (2022-2025),
+          IJCAI (2022-2024), COLING (2020,2024,2025), BMVC (2024), COLM (2024),
+          ICRA (2025), 
           ACM TIST(2015), TACL (Standing Reviewer), Acta Automatica Sinica</li>
       </ul>
     </div>
@@ -272,7 +275,7 @@ Referring Expression Matching</span>. <br/> In <i>Proceedings of <b>EMNLP 2022</
     </div>
 
     <div id="last-updated">
-      Last-updated: Oct 09, 2024.
+      Last-updated: Nov 09, 2024.
     </div>
   </body>
 </html>
