--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
       <div id="google-scholar"><a href="https://scholar.google.com/citations?user=hgYzkOQAAAAJ&hl=en">Google Scholar Citations</a></div>
       <ul>
         <h3><strong>2025</strong></h3>
-           <li>Xuanyu Lei, Zonghan Yang, Xinrui Chen, <span id="me">Peng Li</span>, Yang Liu. 2025. <br/> <span id="title">Scaffolding Coordinates to Promote Vision-Language Coordination in Large Multi-Modal Models</span>. <br/> To appear in <i>Proceedings of <b>COLING 2025</b></i>. [<a href="https://arxiv.org/abs/2402.12058">arXiv</a>] [<a href="https://leixy20.github.io/scaffold_site/">Project Webpage</a>]</li>
+           <li>Xuanyu Lei, Zonghan Yang, Xinrui Chen, <span id="me">Peng Li</span>, Yang Liu. 2025. <br/> <span id="title">Scaffolding Coordinates to Promote Vision-Language Coordination in Large Multi-Modal Models</span>. <br/> To appear in <i>Proceedings of <b>COLING 2025</b></i>. [<a href="https://arxiv.org/abs/2402.12058">arXiv</a>] [<a href="https://github.com/THUNLP-MT/Scaffold">code</a>] [<a href="https://leixy20.github.io/scaffold_site/">Project Webpage</a>]</li>
           <li>Zeyuan Yang, Fangzhou Xiong, <span id="me">Peng Li</span> and Yang Liu. 2025. <br/> <span id="title">Rethinking Long Context Generation from the Continual Learning Perspective</span>. <br/> To appear in <i>Proceedings of <b>COLING 2025</b></i>.</li>
           <li>Yile Wang, Sijie Cheng, Zixin Sun, <span id="me">Peng Li</span>, Yang Liu. 2025. <br/> <span id="title">Leveraging Language-based Representations for Better Solving Symbol-related Problems with Large Language Models</span>. <br/> To appear in <i>Proceedings of <b>COLING 2025</b></i>. [<a href="https://arxiv.org/abs/2401.11725">arXiv</a>] [<a href="https://github.com/THUNLP-MT/symbol2language">code</a>]</li>
         <h3><strong>2024</strong></h3>
@@ -279,7 +279,7 @@ Referring Expression Matching</span>. <br/> In <i>Proceedings of <b>EMNLP 2022</
     </div>
 
     <div id="last-updated">
-      Last-updated: Dec 09, 2024.
+      Last-updated: Dec 16, 2024.
     </div>
   </body>
 </html>
