--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 
     <div id="bio">
       <!--h2>Bio</h2--!>
-      Peng Li is a Research Associate Professor at Institute for AI Industry Research (AIR), Tsinghua University, China. He received his B.S. degree in computer science and technology from Tsinghua University in 2009 and his Ph.D. in computer science and technology from Tsinghua University in 2015. Before joining Tsinghua, he was a principal researcher and team leader at WeChat AI, Tencent. He also previously worked at Institute of Deep Learning (IDL), Baidu Inc. His research interests include artificial intelligence and natural language processing. He received ACL 2023 Outstanding Paper Award, CIKM 2021 Best Resource Paper Nomination, and First Prize of Qian Weichang Chinese Information Processing Science and Technology Award.
+      Peng Li is a Research Associate Professor at Institute for AI Industry Research (AIR), Tsinghua University, China. He received his B.S. degree in computer science and technology from Tsinghua University in 2009 and his Ph.D. in computer science and technology from Tsinghua University in 2015. Before joining Tsinghua, he was a principal researcher and team leader at WeChat AI, Tencent. He also previously worked at Institute of Deep Learning (IDL), Baidu Inc. His research interests include artificial intelligence and natural language processing. He received ACL 2023 Outstanding Paper Award and First Prize of Qian Weichang Chinese Information Processing Science and Technology Award.
     </div>
 
     <div id="publications">
@@ -139,7 +139,7 @@
           <li>Tianyuan Zou, Yang Liu, <span id="me">Peng Li</span>, Jianqing Zhang, Jingjing Liu, Ya-Qin Zhang. 2024. <br/> <span id="title">FuseGen: PLM Fusion for Data-generation based Zero-shot Learning</span>. <br/> In <i>Proceedings of <b>EMNLP 2024</b></i>, 2172-2190. [<a href="https://aclanthology.org/2024.emnlp-main.130.pdf">pdf</a>] [<a href="https://arxiv.org/abs/2406.12527">arXiv</a>] [<a href="https://github.com/LindaLydia/FuseGen">code</a>]</li>
           <li>Yuanhang Zheng, Zhixing Tan, <span id="me">Peng Li</span>, Yang Liu. 2024. <br/> <span id="title">Black-box Prompt Tuning with Subspace Learning</span>. <br/> <i><b>IEEE/ACM Transactions on Audio, Speech and Language Processing (TASLP)</b></i>, 2024(32):3002-3013. [<a href="https://ieeexplore.ieee.org/document/10551912?source=authoralert">pdf</a>] [<a href="https://arxiv.org/abs/2305.03518">arXiv</a>]</li>
           <li>Yujia Qin, Xiaozhi Wang, Yusheng Su, Yankai Lin, Ning Ding, Jing Yi, Weize Chen, Zhiyuan Liu, Juanzi Li, Lei Hou, <span id="me">Peng Li</span>, Maosong Sun, Jie Zhou. 2024. <br/> <span id="title">Exploring Universal Intrinsic Task Subspace for Few-shot Learning via Prompt Tuning</span>. <br/> <i><b>IEEE/ACM Transactions on Audio, Speech and Language Processing (TASLP)</b></i>, 2024(32):3631-3643. [<a href="https://ieeexplore.ieee.org/document/10603438">pdf</a>] [<a href="https://arxiv.org/abs/2110.07867">arXiv</a>]</li>
-          <li>Xiaoyue Mi, Fan Tang, Yepeng Weng, Danding Wang, Juan Cao, Sheng Tang, <span id="me">Peng Li</span>, Yang Liu. 2024. <br/> <span id="title">Topology-preserving Adversarial Training for Alleviating Natural Accuracy Degradation</span>. <br/> To appear in <i>Proceedings of <b>BMVC 2024</b></i>.</li>
+          <li>Xiaoyue Mi, Fan Tang, Yepeng Weng, Danding Wang, Juan Cao, Sheng Tang, <span id="me">Peng Li</span>, Yang Liu. 2024. <br/> <span id="title">Topology-preserving Adversarial Training for Alleviating Natural Accuracy Degradation</span>. <br/> In <i>Proceedings of <b>BMVC 2024</b></i>. [<a href="https://bmvc2024.org/proceedings/168/">pdf</a>]</li>
           <li>Yuanchun Li, Hao Wen, Weijun Wang, Xiangyu Li, Yizhen Yuan, Guohong Liu, Jiacheng Liu, Wenxing Xu, Xiang Wang, Yi Sun, Rui Kong, Yile Wang, Hanfei Geng, Jian Luan, Xuefeng Jin, Zilong Ye, Guanjing Xiong, Fan Zhang, Xiang Li, Mengwei Xu, Zhijun Li, <span id="me">Peng Li</span>, Yang Liu, Ya-Qin Zhang, Yunxin Liu. 2024. <br/> <span id="title">Personal LLM Agents: Insights and Survey about the Capability, Efficiency and Security</span>. <br/> <i>Preprint</i> [<a href="https://arxiv.org/abs/2401.05459">arXiv</a>] [<a href="https://github.com/MobileLLM/Personal_LLM_Agents_Survey">Paper List</a>]</li>
           <li>Zijun Liu, Boqun Kou, <span id="me">Peng Li</span>, Ming Yan, Ji Zhang, Fei Huang, Yang Liu. 2024. <br/> <span id="title">Enabling Weak LLMs to Judge Response Reliability via Meta Ranking</span>. <br/> <i>Preprint</i> [<a href="https://arxiv.org/abs/2402.12146">arXiv</a>] [<a href="https://github.com/THUNLP-MT/MetaRanking">code</a>]</li>
           <li>Ziyue Wang, Chi Chen, Fuwen Luo, Yurui Dong, Yuanchi Zhang, Yuzhuang Xu, Xiaolong Wang, <span id="me">Peng Li</span>, Yang Liu. 2024. <br/> <span id="title">ActiView: Evaluating Active Perception Ability for Multimodal Large Language Models</span>. <br/> <i>Preprint</i> [<a href="https://arxiv.org/abs/2410.04659">arXiv</a>] [<a href="https://github.com/THUNLP-MT/ActiView">code</a>]</li>
@@ -255,12 +255,12 @@ Referring Expression Matching</span>. <br/> In <i>Proceedings of <b>EMNLP 2022</
       <h2>Professional Services</h2>
       <ul>
         <li>Senior Area Chair: AACL (2022)</li>
-        <li>Area Chair: ACL (2024), <!-- EMNLP 2024, -->NAACL (2024<!--, 2025-->), EACL (2024), COLING (2022)</li>
+        <li>Area Chair: ACL (2024<!--, 2025-->), EMNLP (2024), NAACL (2024<!--, 2025-->), EACL (2024), COLING (2022)</li>
         <li>Action Editor: ACL Rolling Review (ARR)</li>
         <li>PC Chair: YWCL (2010)</li>
         <li>Tutorial Chair: CCL (2023), CCMT (2023)</li>
         <li>Demonstration Chair: CCL (2024)</li>
-        <li>Reviewer/PC Member: NeurIPS (2022-2024), ICML (2022-2024), ICLR (2024,2025),
+        <li>Reviewer/PC Member: NeurIPS (2022-2024), ICML (2022-2024<!--2025-->), ICLR (2024-2025),
           ACL (2014, 2021-2023), EMNLP (2014, 2021-2023), NAACL (2018),
           CVPR (2023-2025), ICCV (2023), ECCV (2024), AAAI (2022-2025),
           IJCAI (2022-2024), COLING (2020,2024,2025), BMVC (2024), COLM (2024),
@@ -279,7 +279,7 @@ Referring Expression Matching</span>. <br/> In <i>Proceedings of <b>EMNLP 2022</
     </div>
 
     <div id="last-updated">
-      Last-updated: Dec 16, 2024.
+      Last-updated: Dec 30, 2024.
     </div>
   </body>
 </html>
