--- a/index.html
+++ b/index.html
@@ -120,6 +120,8 @@
           <li>Zeyuan Yang, Fangzhou Xiong, <span id="me">Peng Li</span> and Yang Liu. 2025. <br/> <span id="title">Rethinking Long Context Generation from the Continual Learning Perspective</span>. <br/> In <i>Proceedings of <b>COLING 2025</b></i>, 1922-1933. [<a href="https://aclanthology.org/2025.coling-main.131.pdf">pdf</a>]</li>
           <li>Yile Wang, Sijie Cheng, Zixin Sun, <span id="me">Peng Li</span>, Yang Liu. 2025. <br/> <span id="title">Leveraging Language-based Representations for Better Solving Symbol-related Problems with Large Language Models</span>. <br/> In <i>Proceedings of <b>COLING 2025</b></i>, 5544-5557. [<a href="https://aclanthology.org/2025.coling-main.372.pdf">pdf</a>] [<a href="https://arxiv.org/abs/2401.11725">arXiv</a>] [<a href="https://github.com/THUNLP-MT/symbol2language">code</a>]</li>
           <li>Wei Zhang, Pengfei Li, Junli Wang, Bingchuan Sun, Qihao Jin, Guangjun Bao, Shibo Rui, Yang Yu, Wenchao Ding, <span id="me">Peng Li</span>, Yilun Chen. 2025. <br/> <span id="title">Dual-AEB: Synergizing Rule-Based and Multimodal Large Language Models for Effective Emergency Braking</span>. <br/> To appear in <i>Proceedings of <b>ICRA 2025</b></i>. [<a href="https://arxiv.org/abs/2410.08616">arXiv</a>] [<a href="https://github.com/ChipsICU/Dual-AEB">code</a>]</li>
+          <li>Yiqi Zhu, Ziyue Wang, Can Zhang, <span id="me">Peng Li</span>, Yang Liu. 2025. <br/> <span id="title">CoSpace: Benchmarking Continuous Space Perception Ability for Vision-Language Models</span>. <br/> To appear in <i>Proceedings of <b>CVPR 2025</b></i>.</li>
+          <li>Yiyang Du, Xiaochen Wang, Chi Chen, Jiabo Ye, Yiru Wang, <span id="me">Peng Li</span>, Ming Yan, Ji Zhang, Fei Huang, Zhifang Sui, Maosong Sun, Yang Liu. 2025. <br/> <span id="title">AdaMMS: Model Merging for Heterogeneous Multimodal Large Language Models with Unsupervised Coefficient Optimization</span>. <br/> To appear in <i>Proceedings of <b>CVPR 2025</b></i>.</li>
           <li>Zhitao He, Zijun Liu, <span id="me">Peng Li</span>, May Fung, Ming Yan, Ji Zhang, Fei Huang, Yang Liu. 2025. <br/> <span id="title">Enhancing Language Multi-Agent Learning with Multi-Agent Credit Re-Assignment for Interactive Environment Generalization</span>. <br/> <i>Preprint</i> [<a href="https://arxiv.org/abs/2502.14496">arXiv</a>] [<a href="https://github.com/THUNLP-MT/CollabUIAgents">code</a>]</li>
           <li>Tianyuan Zou, Yang Liu, <span id="me">Peng Li</span>, Yufei Xiong, Jianqing Zhang, Jingjing Liu, Xiaozhou Ye, Ye Ouyang, Ya-Qin Zhang. 2025. <br/> <span id="title">Contrastive Private Data Synthesis via Weighted Multi-PLM Fusion</span>. <br/> <i>Preprint</i> [<a href="https://arxiv.org/abs/2502.00245">arXiv</a>]</li>
         <h3><strong>2024</strong></h3>
@@ -281,7 +283,7 @@
     </div>
 
     <div id="last-updated">
-      Last-updated: Feb 25, 2025.
+      Last-updated: Feb 27, 2025.
     </div>
   </body>
 </html>
