--- a/index.html
+++ b/index.html
@@ -122,6 +122,7 @@
           <li>Wei Zhang, Pengfei Li, Junli Wang, Bingchuan Sun, Qihao Jin, Guangjun Bao, Shibo Rui, Yang Yu, Wenchao Ding, <span id="me">Peng Li</span>, Yilun Chen. 2025. <br/> <span id="title">Dual-AEB: Synergizing Rule-Based and Multimodal Large Language Models for Effective Emergency Braking</span>. <br/> To appear in <i>Proceedings of <b>ICRA 2025</b></i>. [<a href="https://arxiv.org/abs/2410.08616">arXiv</a>] [<a href="https://github.com/ChipsICU/Dual-AEB">code</a>]</li>
           <li>Yiqi Zhu, Ziyue Wang, Can Zhang, <span id="me">Peng Li</span>, Yang Liu. 2025. <br/> <span id="title">CoSpace: Benchmarking Continuous Space Perception Ability for Vision-Language Models</span>. <br/> To appear in <i>Proceedings of <b>CVPR 2025</b></i>.</li>
           <li>Yiyang Du, Xiaochen Wang, Chi Chen, Jiabo Ye, Yiru Wang, <span id="me">Peng Li</span>, Ming Yan, Ji Zhang, Fei Huang, Zhifang Sui, Maosong Sun, Yang Liu. 2025. <br/> <span id="title">AdaMMS: Model Merging for Heterogeneous Multimodal Large Language Models with Unsupervised Coefficient Optimization</span>. <br/> To appear in <i>Proceedings of <b>CVPR 2025</b></i>.</li>
+          <li>Ziyue Wang, Yurui Dong, Fuwen Luo, Minyuan Ruan, Zhili Cheng, Chi Chen, <span id="me">Peng Li</span>, Yang Liu. 2025. <br/> <span id="title">How Do Multimodal Large Language Models Handle Complex Multimodal Reasoning? Placing Them in An Extensible Escape Game</span>. <br/> <i>Preprint</i> [<a href="https://arxiv.org/abs/2503.10042">arXiv</a>] [<a href="https://github.com/THUNLP-MT/EscapeCraft">code</a>]</li>
           <li>Zhitao He, Zijun Liu, <span id="me">Peng Li</span>, May Fung, Ming Yan, Ji Zhang, Fei Huang, Yang Liu. 2025. <br/> <span id="title">Enhancing Language Multi-Agent Learning with Multi-Agent Credit Re-Assignment for Interactive Environment Generalization</span>. <br/> <i>Preprint</i> [<a href="https://arxiv.org/abs/2502.14496">arXiv</a>] [<a href="https://github.com/THUNLP-MT/CollabUIAgents">code</a>]</li>
           <li>Tianyuan Zou, Yang Liu, <span id="me">Peng Li</span>, Yufei Xiong, Jianqing Zhang, Jingjing Liu, Xiaozhou Ye, Ye Ouyang, Ya-Qin Zhang. 2025. <br/> <span id="title">Contrastive Private Data Synthesis via Weighted Multi-PLM Fusion</span>. <br/> <i>Preprint</i> [<a href="https://arxiv.org/abs/2502.00245">arXiv</a>]</li>
         <h3><strong>2024</strong></h3>
@@ -150,7 +151,7 @@
           <li>Ziyue Wang, Chi Chen, Fuwen Luo, Yurui Dong, Yuanchi Zhang, Yuzhuang Xu, Xiaolong Wang, <span id="me">Peng Li</span>, Yang Liu. 2024. <br/> <span id="title">ActiView: Evaluating Active Perception Ability for Multimodal Large Language Models</span>. <br/> <i>Preprint</i> [<a href="https://arxiv.org/abs/2410.04659">arXiv</a>] [<a href="https://github.com/THUNLP-MT/ActiView">code</a>]</li>
           <li>Junming Lin, Zheng Fang, Chi Chen, Zihao Wan, Fuwen Luo, <span id="me">Peng Li</span>, Yang Liu, Maosong Sun. 2024. <br/> <span id="title">StreamingBench: Assessing the Gap for MLLMs to Achieve Streaming Video Understanding</span>. <br/> <i>Preprint</i> [<a href="https://arxiv.org/abs/2411.03628">arXiv</a>] [<a href="https://github.com/THUNLP-MT/StreamingBench">code</a>] [<a href="https://streamingbench.github.io/">Project Webpage</a>]</li>
           <li>Xiaoyue Mi, Fan Tang, Juan Cao, <span id="me">Peng Li</span>, Yang Liu. 2024. <br/> <span id="title">Visual-Friendly Concept Protection via Selective Adversarial Perturbations</span>. <br/> <i>Preprint</i> [<a href="https://arxiv.org/abs/2408.08518">arXiv</a>]</li>
-          <li>Zhengming Wang, Junli Wang, Pengfei Li, Zhaohan Li, <span id="me">Peng Li</span>, Yilun Chen. 2024. <br/> <span id="title">Bench4Merge: A Comprehensive Benchmark for Merging in Realistic Dense Traffic with Micro-Interactive Vehicles</span>. <br/> <i>Preprint</i> [<a href="https://arxiv.org/abs/2410.15912">arXiv</a>]</li>
+          <li>Zhengming Wang, Junli Wang, Pengfei Li, Zhaohan Li, <span id="me">Peng Li</span>, Yilun Chen. 2024. <br/> <span id="title">Bench4Merge: A Comprehensive Benchmark for Merging in Realistic Dense Traffic with Micro-Interactive Vehicles</span>. <br/> <i>Preprint</i> [<a href="https://arxiv.org/abs/2410.15912">arXiv</a>] [<a href="https://github.com/WZM5853/Bench4Merge">code</a>]</li>
         <h3><strong>2023</strong></h3>
            <li>Zeyuan Yang, <span id="me">Peng Li</span>, Yang Liu. 2023. <br/> <span id="title">Failures Pave the Way: Enhancing Large Language Models through Tuning-free Rule Accumulation</span>. <br/> In <i>Proceedings of <b>EMNLP 2023</b></i>, 1751-1777. [<a href="https://aclanthology.org/2023.emnlp-main.109.pdf">pdf</a>] [<a href="https://arxiv.org/abs/2310.15746">arXiv</a>] [<a href="https://github.com/THUNLP-MT/TRAN">code</a>]</li>
           <li>Kaiyu Huang, <span id="me">Peng Li</span>, Junpeng Liu, Maosong Sun, Yang Liu. 2023. <br/> <span id="title">Learn and Consolidate: Continual Adaptation for Zero-Shot and Multilingual Neural Machine Translation</span>. <br/> In <i>Proceedings of <b>EMNLP 2023</b></i>, 13938-13951. [<a href="https://aclanthology.org/2023.emnlp-main.860.pdf">pdf</a>] [<a href="https://github.com/koukaiu/LCCA">code</a>]</li>
@@ -264,9 +265,9 @@
         <li>PC Chair: YWCL (2010)</li>
         <li>Tutorial Chair: CCL (2023), CCMT (2023)</li>
         <li>Demonstration Chair: CCL (2024)</li>
-        <li>Reviewer/PC Member: NeurIPS (2022-2024), ICML (2022-2024<!--2025-->), ICLR (2024-2025),
+        <li>Reviewer/PC Member: NeurIPS (2022-2024), ICML (2022-2025), ICLR (2024-2025),
           ACL (2014, 2021-2023), EMNLP (2014, 2021-2023), NAACL (2018),
-          CVPR (2023-2025), ICCV (2023), ECCV (2024), AAAI (2022-2025),
+          CVPR (2023-2025), ICCV (2023<!--, 2025-->), ECCV (2024), AAAI (2022-2025),
           IJCAI (2022-2024), COLING (2020,2024,2025), BMVC (2024), COLM (2024),
           ICRA (2025), 
           ACM TIST(2015), TACL (Standing Reviewer), Acta Automatica Sinica</li>
@@ -283,7 +284,7 @@
     </div>
 
     <div id="last-updated">
-      Last-updated: Feb 27, 2025.
+      Last-updated: Mar 20, 2025.
     </div>
   </body>
 </html>
