--- a/index.html
+++ b/index.html
@@ -120,10 +120,10 @@
           <li>Zeyuan Yang, Fangzhou Xiong, <span id="me">Peng Li</span> and Yang Liu. 2025. <br/> <span id="title">Rethinking Long Context Generation from the Continual Learning Perspective</span>. <br/> In <i>Proceedings of <b>COLING 2025</b></i>, 1922-1933. [<a href="https://aclanthology.org/2025.coling-main.131.pdf">pdf</a>]</li>
           <li>Yile Wang, Sijie Cheng, Zixin Sun, <span id="me">Peng Li</span>, Yang Liu. 2025. <br/> <span id="title">Leveraging Language-based Representations for Better Solving Symbol-related Problems with Large Language Models</span>. <br/> In <i>Proceedings of <b>COLING 2025</b></i>, 5544-5557. [<a href="https://aclanthology.org/2025.coling-main.372.pdf">pdf</a>] [<a href="https://arxiv.org/abs/2401.11725">arXiv</a>] [<a href="https://github.com/THUNLP-MT/symbol2language">code</a>]</li>
           <li>Wei Zhang, Pengfei Li, Junli Wang, Bingchuan Sun, Qihao Jin, Guangjun Bao, Shibo Rui, Yang Yu, Wenchao Ding, <span id="me">Peng Li</span>, Yilun Chen. 2025. <br/> <span id="title">Dual-AEB: Synergizing Rule-Based and Multimodal Large Language Models for Effective Emergency Braking</span>. <br/> To appear in <i>Proceedings of <b>ICRA 2025</b></i>. [<a href="https://arxiv.org/abs/2410.08616">arXiv</a>] [<a href="https://github.com/ChipsICU/Dual-AEB">code</a>]</li>
-          <li>Yiqi Zhu, Ziyue Wang, Can Zhang, <span id="me">Peng Li</span>, Yang Liu. 2025. <br/> <span id="title">CoSpace: Benchmarking Continuous Space Perception Ability for Vision-Language Models</span>. <br/> To appear in <i>Proceedings of <b>CVPR 2025</b></i>.</li>
-          <li>Yiyang Du, Xiaochen Wang, Chi Chen, Jiabo Ye, Yiru Wang, <span id="me">Peng Li</span>, Ming Yan, Ji Zhang, Fei Huang, Zhifang Sui, Maosong Sun, Yang Liu. 2025. <br/> <span id="title">AdaMMS: Model Merging for Heterogeneous Multimodal Large Language Models with Unsupervised Coefficient Optimization</span>. <br/> To appear in <i>Proceedings of <b>CVPR 2025</b></i>.</li>
-          <li>Ziyue Wang, Yurui Dong, Fuwen Luo, Minyuan Ruan, Zhili Cheng, Chi Chen, <span id="me">Peng Li</span>, Yang Liu. 2025. <br/> <span id="title">How Do Multimodal Large Language Models Handle Complex Multimodal Reasoning? Placing Them in An Extensible Escape Game</span>. <br/> <i>Preprint</i> [<a href="https://arxiv.org/abs/2503.10042">arXiv</a>] [<a href="https://github.com/THUNLP-MT/EscapeCraft">code</a>]</li>
-          <li>Zhitao He, Zijun Liu, <span id="me">Peng Li</span>, May Fung, Ming Yan, Ji Zhang, Fei Huang, Yang Liu. 2025. <br/> <span id="title">Enhancing Language Multi-Agent Learning with Multi-Agent Credit Re-Assignment for Interactive Environment Generalization</span>. <br/> <i>Preprint</i> [<a href="https://arxiv.org/abs/2502.14496">arXiv</a>] [<a href="https://github.com/THUNLP-MT/CollabUIAgents">code</a>]</li>
+          <li>Yiqi Zhu, Ziyue Wang, Can Zhang, <span id="me">Peng Li</span>, Yang Liu. 2025. <br/> <span id="title">CoSpace: Benchmarking Continuous Space Perception Ability for Vision-Language Models</span>. <br/> To appear in <i>Proceedings of <b>CVPR 2025</b></i>. [<a href="https://arxiv.org/abs/2503.14161">arXiv</a>] [<a href="https://github.com/THUNLP-MT/CoSpace">code</a>] [<a href="https://thunlp-mt.github.io/CoSpace/">Project Webpage</a>]</li>
+          <li>Yiyang Du, Xiaochen Wang, Chi Chen, Jiabo Ye, Yiru Wang, <span id="me">Peng Li</span>, Ming Yan, Ji Zhang, Fei Huang, Zhifang Sui, Maosong Sun, Yang Liu. 2025. <br/> <span id="title">AdaMMS: Model Merging for Heterogeneous Multimodal Large Language Models with Unsupervised Coefficient Optimization</span>. <br/> To appear in <i>Proceedings of <b>CVPR 2025</b></i>. [<a href="https://arxiv.org/abs/2503.23733">arXiv</a>] [<a href="https://github.com/THUNLP-MT/AdaMMS">code</a>] [<a href="talks/AdaMMS-en.pdf">Slides</a>]</li>
+          <li>Ziyue Wang, Yurui Dong, Fuwen Luo, Minyuan Ruan, Zhili Cheng, Chi Chen, <span id="me">Peng Li</span>, Yang Liu. 2025. <br/> <span id="title">How Do Multimodal Large Language Models Handle Complex Multimodal Reasoning? Placing Them in An Extensible Escape Game</span>. <br/> <i>Preprint</i> [<a href="https://arxiv.org/abs/2503.10042">arXiv</a>] [<a href="https://github.com/THUNLP-MT/EscapeCraft">code</a>] [<a href="talks/MM-Escape-en.pdf">Slides</a>] [<a href="videos/MM-Escape.mp4">Video</a>]</li>
+          <li>Zhitao He, Zijun Liu, <span id="me">Peng Li</span>, May Fung, Ming Yan, Ji Zhang, Fei Huang, Yang Liu. 2025. <br/> <span id="title">Enhancing Language Multi-Agent Learning with Multi-Agent Credit Re-Assignment for Interactive Environment Generalization</span>. <br/> <i>Preprint</i> [<a href="https://arxiv.org/abs/2502.14496">arXiv</a>] [<a href="https://github.com/THUNLP-MT/CollabUIAgents">code</a>] [<a href="talks/CollabUlAgents-zh.pdf">Slides (in Chinese)</a>]</li>
           <li>Tianyuan Zou, Yang Liu, <span id="me">Peng Li</span>, Yufei Xiong, Jianqing Zhang, Jingjing Liu, Xiaozhou Ye, Ye Ouyang, Ya-Qin Zhang. 2025. <br/> <span id="title">Contrastive Private Data Synthesis via Weighted Multi-PLM Fusion</span>. <br/> <i>Preprint</i> [<a href="https://arxiv.org/abs/2502.00245">arXiv</a>]</li>
         <h3><strong>2024</strong></h3>
            <li>Zijun Liu, Kaiming Liu, Yiqi Zhu, Xuanyu Lei, Zonghan Yang, Zhenhe Zhang, <span id="me">Peng Li</span>, Yang Liu. 2024. <br/> <span id="title">AIGS: Generating Science from AI-Powered Automated Falsification</span>. <br/> <i>Preprint</i> [<a href="https://arxiv.org/abs/2411.11910">arXiv</a>] [<a href="https://agent-force.github.io/AIGS/">Project Webpage</a>] [<a href="talks/AIGS-zh.pdf">Slides (in Chinese)</a>]</li>
@@ -260,14 +260,14 @@
       <h2>Professional Services</h2>
       <ul>
         <li>Senior Area Chair: AACL (2022)</li>
-        <li>Area Chair: ACL (2024), EMNLP (2024), NAACL (2024<!--, 2025-->), EACL (2024), COLING (2022)</li>
+        <li>Area Chair: ACL (2024, 2025), EMNLP (2024), NAACL (2024, 2025), EACL (2024), COLING (2022)</li>
         <li>Action Editor: ACL Rolling Review (ARR)</li>
         <li>PC Chair: YWCL (2010)</li>
         <li>Tutorial Chair: CCL (2023), CCMT (2023)</li>
         <li>Demonstration Chair: CCL (2024)</li>
         <li>Reviewer/PC Member: NeurIPS (2022-2024), ICML (2022-2025), ICLR (2024-2025),
           ACL (2014, 2021-2023), EMNLP (2014, 2021-2023), NAACL (2018),
-          CVPR (2023-2025), ICCV (2023<!--, 2025-->), ECCV (2024), AAAI (2022-2025),
+          CVPR (2023-2025), ICCV (2023, 2025), ECCV (2024), AAAI (2022-2025),
           IJCAI (2022-2024), COLING (2020,2024,2025), BMVC (2024), COLM (2024),
           ICRA (2025), 
           ACM TIST(2015), TACL (Standing Reviewer), Acta Automatica Sinica</li>
@@ -284,7 +284,7 @@
     </div>
 
     <div id="last-updated">
-      Last-updated: Mar 20, 2025.
+      Last-updated: Apr 08, 2025.
     </div>
   </body>
 </html>
