--- a/index.html
+++ b/index.html
@@ -261,6 +261,7 @@
           <li><span id="me">Peng Li</span>, Wei Li, Zhengyan He, Xuguang Wang, Ying Cao, Jie Zhou, Wei Xu. 2016. <br/> <span id="title">Dataset and Neural Recurrent Sequence Labeling Model for Open-Domain Factoid Question Answering</span>. <br/> <i>Preprint</i> [<a href="https://arXiv.org/abs/1607.06275">arXiv</a>] [<a href="https://github.com/pengli09/models/archive/neural-qa-verified.zip">code (in the directory "neural_qa", veryfied on Ubuntu 16.04 with <a href="https://pypi.python.org/pypi/paddlepaddle/0.10.5">PaddlePaddle 0.10.5</a>)</a>]</li>
           <li>Jie Zhou, Ying Cao, Xuguang Wang, <span id="me">Peng Li</span>, Wei Xu. 2016. <br/> <span id="title">Deep Recurrent Models with Fast-Forward Connections for Neural Machine Translation</span>. <br/> <i><b>Transactions of the Association for Computational Linguistics (TACL)</b></i>, 2016(4):371-383. [<a href="https://aclanthology.org/Q16-1027.pdf">pdf</a>]</li>
           <li><span id="me">Peng Li</span>, Yang Liu, Maosong Sun, Tatsuya Izuha, Dakun Zhang. 2014. <br/> <span id="title">A Neural Reordering Model for Phrase-based Translation</span>. <br/> In <i>Proceedings of <b>COLING 2014</b></i>, 1897-1907. [<a href="https://aclanthology.org/C14-1179.pdf">pdf</a>] [<a href="talks/coling-2014.pdf">slides</a>]</li>
+          <li><span id="me">Peng Li</span>, Yang Liu, Maosong Sun. 2014. <br/> <span id="title">Neural Reordering Model for Hierarchical Phrase-based Translations</span>. <br/> <i><b>J Tsinghua Univ (Sci & Technol)</b></i>, 2014(54):1529-1533.</li>
           <li><span id="me">Peng Li</span>, Yang Liu, Maosong Sun. 2013. <br/> <span id="title">Recursive Autoencoders for ITG-based Translation</span>. <br/> In <i>Proceedings of <b>EMNLP 2013</b></i>, 567-577. [<a href="https://aclanthology.org/D13-1054.pdf">pdf</a>] [<a href="talks/pengli-tsinghua-rae-itg-mt.pdf">Talk at MSRA Ph.D Forum</a>]</li>
           <li><span id="me">Peng Li</span>, Yang Liu, Maosong Sun. 2013. <br/> <span id="title">An Extended GHKM Algorithm for Inducing Lambda-SCFG</span>. <br/> In <i>Proceedings of <b>AAAI-13</b></i>, 605-611. [<a href="https://ojs.aaai.org/index.php/AAAI/article/view/8567/8426">pdf</a>] [<a href="publications/aaai-2013-slides.pdf">slides</a>]</li>
           <li><span id="me">Peng Li</span>, Yang Liu, Maosong Sun. 2012. <br/> <span id="title">A Beam Search Algorithm for ITG Word Alignment</span>. <br/> In <i>Proceedings of <b>COLING 2012: Posters</b> (short)</i>, 673-682. [<a href="https://aclanthology.org/C12-2066.pdf">pdf</a>]</li>
@@ -301,7 +302,7 @@
     </div>
 
     <div id="last-updated">
-      Last-updated: Jun 26, 2025.
+      Last-updated: Jul 04, 2025.
     </div>
   </body>
 </html>
