--- a/index.html
+++ b/index.html
@@ -130,6 +130,7 @@
           <li>Xiaoyue Mi, Fan Tang, Zonghan Yang, Danding Wang, Juan Cao, <span id="me">Peng Li</span>, Yang Liu. 2025. <br/> <span id="title">Adversarial Robust Memory-Based Continual Learner</span>. <br/> To appear in <i>Proceedings of <b>ICCV 2025</b></i>. [<a href="https://arxiv.org/abs/2311.17608">arXiv</a>]</li>
           <li>Tianyuan Zou, Yang Liu, <span id="me">Peng Li</span>, Yufei Xiong, Jianqing Zhang, Jingjing Liu, Xiaozhou Ye, Ye Ouyang, Ya-Qin Zhang. 2025. <br/> <span id="title">Contrastive Private Data Synthesis via Weighted Multi-PLM Fusion</span>. <br/> To appear in <i>Proceedings of <b>ICML 2025</b></i>. [<a href="https://arxiv.org/abs/2502.00245">arXiv</a>]</li>
           <li>Zhengming Wang, Junli Wang, Pengfei Li, Zhaohan Li, Chunyang Liu, Bo Zhang, <span id="me">Peng Li</span>, Yilun Chen. 2025. <br/> <span id="title">Bench4Merge: A Comprehensive Benchmark for Merging in Realistic Dense Traffic with Micro-Interactive Vehicles</span>. <br/> To appear in <i>Proceedings of <b>IROS 2025</b></i>. [<a href="https://arxiv.org/abs/2410.15912">arXiv</a>] [<a href="https://github.com/WZM5853/Bench4Merge">code</a>] [<a href="videos/Bench4Merge.mp4">Video</a>]</li>
+          <li>Bingshuai Liu, Ante Wang, Zijun Min, Chenyang Lyu, Longyue Wang, Zhihao Wang, Xu Han, <span id="me">Peng Li</span>, Jinsong Su. 2025. <br/> <span id="title">EditEval: Towards Comprehensive and Automatic Evaluation for Text-guided Video Editing</span>. <br/> To appear in <i>Proceedings of <b>ACMMM 2025</b></i>.</li>
           <li>Kaiming Liu, Xuanyu Lei, Ziyue Wang, <span id="me">Peng Li</span>, Yang Liu. 2025. <br/> <span id="title">Agent-Environment Alignment via Automated Interface Generation</span>. <br/> <i>Preprint</i> [<a href="https://arxiv.org/abs/2505.21055">arXiv</a>]</li>
           <li>Fuwen Luo, Shengfeng Lou, Chi Chen, Ziyue Wang, Chenliang Li, Weizhou Shen, Jiyue Guo, <span id="me">Peng Li</span>, Ming Yan, Ji Zhang, Fei Huang, Yang Liu. 2025. <br/> <span id="title">MUSEG: Reinforcing Video Temporal Understanding via Timestamp-Aware Multi-Segment Grounding</span>. <br/> <i>Preprint</i> [<a href="https://arxiv.org/abs/2505.20715">arXiv</a>]</li>
           <li>Zijun Liu, Peiyi Wang, Runxin Xu, Shirong Ma, Chong Ruan, <span id="me">Peng Li</span>, Yang Liu, Yu Wu. 2025. <br/> <span id="title">Inference-Time Scaling for Generalist Reward Modeling</span>. <br/> <i>Preprint</i> [<a href="https://arxiv.org/abs/2504.02495">arXiv</a>]</li>
@@ -302,7 +303,7 @@
     </div>
 
     <div id="last-updated">
-      Last-updated: Jul 04, 2025.
+      Last-updated: Jul 06, 2025.
     </div>
   </body>
 </html>
