--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 
     <div id="bio">
       <!--h2>Bio</h2--!>
-      Peng Li is a Research Associate Professor at Institute for AI Industry Research (AIR), Tsinghua University, China. He received his B.S. degree in computer science and technology from Tsinghua University in 2009 and his Ph.D. in computer science and technology from Tsinghua University in 2015. Before joining Tsinghua, he was a principal researcher and team leader at WeChat AI, Tencent. He also previously worked at Institute of Deep Learning (IDL), Baidu Inc. His research interests include artificial intelligence and natural language processing. He received ACL 2023 Outstanding Paper Award and First Prize of Qian Weichang Chinese Information Processing Science and Technology Award.
+      Peng Li is a Research Associate Professor at the Institute for AI Industry Research (AIR), Tsinghua University. His primary research interests include large language models (LLMs), LLM-based agents, and AI for mathematics (AI4Math). He has published over 90 papers in top-tier international conferences and journals in artificial intelligence, and received the Outstanding Paper Award at ACL 2023. His work has ranked first on several globally influential benchmarks, surpassing teams from Google Research and OpenAI. He has led major scientific research projects, including a key task under the National Science and Technology Innovation - Major Program and the National Natural Science Foundation of China (NSFC) General Program. He has also served as an Area Chair for top-tier international conferences such as ACL, EMNLP, and NAACL. His research has been successfully applied in Baidu and WeChat—products with tens of millions of daily active users—yielding significant impact. He was awarded the First Prize of the Qian Weichang Chinese Information Processing Science and Technology Award by the Chinese Information Processing Society of China (CIPS).
     </div>
 
     <div id="publications">
@@ -141,6 +141,7 @@
           <li>Xiaojun Bi, Shuo Li, Junyao Xing, Ziyue Wang, Fuwen Luo, Weizheng Qiao, Lu Han, Ziwei Sun, <span id="me">Peng Li</span>, Yang Liu. 2025. <br/> <span id="title">DongbaMIE: A Multimodal Information Extraction Dataset for Evaluating Semantic Understanding of Dongba Pictograms</span>. <br/> <i>Preprint</i> [<a href="https://arxiv.org/abs/2503.03644">arXiv</a>] [<a href="https://github.com/thinklis/DongbaMIE">code</a>] [<a href="https://huggingface.co/datasets/thinklis/DongbaMIE">Dataset</a>]</li>
           <li>Zijun Liu, Zhennan Wan, <span id="me">Peng Li</span>, Ming Yan, Ji Zhang, Fei Huang, Yang Liu. 2025. <br/> <span id="title">Scaling External Knowledge Input Beyond Context Windows of LLMs via Multi-Agent Collaboration</span>. <br/> <i>Preprint</i> [<a href="https://arxiv.org/abs/2505.21471">arXiv</a>] [<a href="https://github.com/THUNLP-MT/ExtAgents">code</a>]</li>
           <li>Xuanyu Lei, Chenliang Li, Yuning Wu, Kaiming Liu, Weizhou Shen, <span id="me">Peng Li</span>, Ming Yan, Ji Zhang, Fei Huang, Yang Liu. 2025. <br/> <span id="title">Writing-RL: Advancing Long-form Writing via Adaptive Curriculum Reinforcement Learning</span>. <br/> <i>Preprint</i> [<a href="https://arxiv.org/abs/2506.05760">arXiv</a>] [<a href="https://github.com/Tongyi-Zhiwen/Writing-RL">code</a>]</li>
+          <li>Xiaolong Wang, Zhaolu Kang, Wangyuxuan Zhai, Xinyue Lou, Yunghwei Lai, Ziyue Wang, Yawen Wang, Kaiyu Huang, Yile Wang, <span id="me">Peng Li</span>, Yang Liu. 2025. <br/> <span id="title">MUCAR: Benchmarking Multilingual Cross-Modal Ambiguity Resolution for Multimodal Large Language Models</span>. <br/> <i>Preprint</i> [<a href="https://arxiv.org/abs/2506.17046">arXiv</a>]</li>
         <h3><strong>2024</strong></h3>
            <li>Zonghan Yang, An Liu, Zijun Liu, Kaiming Liu, Fangzhou Xiong, Yile Wang, Zeyuan Yang, Qingyuan Hu, Xinrui Chen, Zhenhe Zhang, Fuwen Luo, Zhicheng Guo, <span id="me">Peng Li</span>, Yang Liu. 2024. <br/> <span id="title">Position: Towards Unified Alignment Between Agents, Humans, and Environment</span>. <br/> In <i>Proceedings of <b>ICML 2024</b></i>, 56251-56275. [<a href="https://proceedings.mlr.press/v235/yang24p.html">pdf</a>] [<a href="https://arxiv.org/abs/2402.07744">arXiv</a>] [<a href="https://agent-force.github.io/unified-alignment-for-agents.html">Project Webpage</a>]</li>
           <li>Fuwen Luo, Chi Chen, Zihao Wan, Zhaolu Kang, Qidong Yan, Yingjie Li, Xiaolong Wang, Siyu Wang, Ziyue Wang, Xiaoyue Mi, <span id="me">Peng Li</span>, Ning Ma, Maosong Sun, Yang Liu. 2024. <br/> <span id="title">CODIS: Benchmarking Context-Dependent Visual Comprehension for Multimodal Large Language Models</span>. <br/> In <i>Proceedings of <b>ACL 2024</b></i>, 10639-10659. [<a href="https://aclanthology.org/2024.acl-long.573.pdf">pdf</a>] [<a href="https://arxiv.org/abs/2402.13607">arXiv</a>] [<a href="https://github.com/THUNLP-MT/CODIS">code</a>] [<a href="https://thunlp-mt.github.io/CODIS">Project Webpage</a>]</li>
@@ -303,7 +304,7 @@
     </div>
 
     <div id="last-updated">
-      Last-updated: Jul 06, 2025.
+      Last-updated: Jul 07, 2025.
     </div>
   </body>
 </html>
